# stins4llvm

./: protect.c  sample.c  wrapper.py
pass/: .pass.cpp.swp  CMakeLists.txt  pass.cpp
stins/: .Skeleton.cpp.swp  CMakeLists.txt  stins.cpp
